--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,445 +8,278 @@
     <title>Mercado Liebre</title>
     <link rel="stylesheet" href="/css/styles.css">
 
-    
+
 
 </head>
+
 <body>
 
-    
+    <header>
+        <div class="logo">
 
-
-   
-   
-
-
-
-
-  <header>
-    <div class="logo">
-   
-      <img src = "/images/logo-mercado-liebre.svg" alt= ""
-      style="width: 200px;
-      height: 100px;">
-
-</div>
-      <div id="busqueda"></div>
-
- 
-  <div class="box"> 
-    <form action="#">
-        <input type="text"
-        
-            placeholder="Buscar productos, marcas"
-            
-            name="search"
-        
-            style="width: 228px"
-            
-            padding-bottom: 50%>                  
-        
-        </div>
-    <div class="lupa">
-    <button>
-
-   
-        <i class="fa fa-search"
-            style="font-size: 18px;"
-            >
-        </i>
-    </button>
-</form></div>
-      
-    <div class="cuotas">
-     <a href=""><span class="fas fa-hand-holding-usd"></span> </a>   Comprá en cuotas y sin tarjeta de crédito
-    </div>
-    <div class="items">
-
-<nav>
-           
-<ul>
-        <li><a href="">Ofertas</a></li>
-        <li><a href="">Tiendas oficiales</a></li>
-        <li><a href="">Vender</a></li>
-        <li><a href="">Ayuda</a></li>
-
-    </ul>
-
-
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    rel="stylesheet" />
- 
-
-  <ul>
-       
-        <li><a href="">Creá tu cuenta</a>
-
-
-
-        <a href=""><i class="fas fa-id-card"></i></a>   
-
-    </li> 
-
-
-        <li><a href="">Ingresá</a>       
-        
-        
-        
-        <a href=""><i class="fas fa-sign-in-alt"></i></a>        
-      </li> 
-       
-
-
-        <li><a href="">Mis compras</a>
-
-            <a href=""><i class="fas fa-shopping-basket"></i></a>    
+            <img src="/images/logo-mercado-liebre.svg" alt="">
 
         </div>
-    </li>
-</ul>
 
+        <div class="buscador">
 
-</nav>
-<br>
-    <div class="burger-menu">
-     
-        <i class="fas fa-bars"></i>
-       </div>
+            <input type="text" placeholder="Buscar productos, marcas" name="search">
 
-    
- 
-
-    <img src = "/images/img-home-banner.jpg" alt= ""
-
-
-    style="width: 100%;
-       padding-bottom: 1%;
-       padding-top: 20%;
-    height: 70px;">
-
-
-</nav>
-
-</header>
-
-<main>
-
-
-
-<section>
-   
-        
-
-
-
-
-<article>
-            
-
-    <center>
-        <div class="caja"  >
-            
-           <div class="palabra"><h4>Basado en tu última visita</h4>  <h3>Ofertas</h3></div>
-            <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
-        style="width: 250px;
-     
-        height: 250px;
-          margin-top: 35px;" >
-
-     </center>
-     <div class="caja2">
-<div class= "estructura"></div>
-
-     <div class= "circulo"> <div class= "camión">
-        <i class="fas fa-truck"></i>
-    </div></div>
-
-
-        <div class="precio">
-           
-        <p>$6.770</p></div>
-            <p>40% OFF</p>
-        <div class= "descripcion">
-            <h4>Cafetera Moulinex</h4></div>
         </div>
-    </div>
-</article>
 
-</div>
-
-<article>
-                <center>
-                    <div class="caja"  >
-                        <div class="palabra"><h3>Ofertas</h3></div>
-                <img src = "/images/img-macbook-pro-2019.jpg" alt= ""
-                style="width: 250px;
-       
-                height: 250px;
-                margin-top: 35px;">
-
-            </center>
-            <div class="caja2">
-            <div class= "estructura"></div>
-            <div class= "circulo"> <div class= "camión">
-                <i class="fas fa-truck"></i>
-            </div></div>
-                <div class="precio">
-                   
-                <p>$230.000</p> </div>
-                    <p>20% OFF</p>
-                    <div class= "descripcion">
-                    <h4>MacBook Pro 2019</h4>
-                </div>
-                
-</article>
-
-<article>
-    <center>
-        <div class="caja"  >
-            <div class="palabra"><h3>Ofertas</h3></div>
-                        <img src = "/images/img-samsung-galaxy-s10.jpg" alt= ""
-
-                        style="width: 250px;
-       
-                        height: 250px; 
-                        margin-top: 35px;">
-    </center>
-    <div class="caja2">
-    <div class= "estructura"></div>
-    <div class= "circulo"> <div class= "camión">
-        <i class="fas fa-truck"></i>
-    </div></div>
-                        <div class="precio">
-                         
-                        <p>$70.500</p> </div>
-                            <p>10% OFF</p>
-                            <div class= "descripcion">
-                               <h4>Samsung Galaxy S10</h4>
-                            </div>
-                       
- </article>
-<article>
-                                <center>
-                                    <div class="caja"  >
-                                        <div class="palabra"><h3>Ofertas</h3></div>
-                                <img src = "/images/img-tv-samsung-smart.jpg" alt= ""
-                                style="width: 250px;
-       
-                                height: 250px;
-                                margin-top: 35px;">
-
-                            </center>
-                            <div class="caja2">
-                            <div class= "estructura"></div>
-                            <div class= "circulo"> <div class= "camión">
-                                <i class="fas fa-truck"></i>
-                            </div></div>
-                                <div class="precio">
-                                   
-                                <p>$23.200</p> </div>
-                                    <p>5% OFF</p>
-                                    <div class= "descripcion">
-                                    <h4>SmartTv Samsung 43"</h4> 
-                                </div>          
-                                </div>
-
-     </article>
+        <button class="icono-buscador">
 
 
-
-    </section>
-
-    <section>
-
-    <article>
-
-<center>
-        <div class="caja"  >
-            
-            <div class="palabra"><h3>Sección de ofertas</h3>  <h3>Ofertas</h3></div>
+            <i class="fa fa-search">
+            </i>
+        </button>
 
 
+        <p><a href=""><i class="fas fa-hand-holding-usd"></i> </a> Comprá en cuotas y sin tarjeta de crédito</p>
 
-        <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
-    
+        <nav>
 
-        style="width: 250px;
-       
-        height: 250px;
-        margin-top: 35px;">
+            <ul>
+                <li><a href="">Ofertas</a></li>
+                <li><a href="">Tiendas oficiales</a></li>
+                <li><a href="">Vender</a></li>
+                <li><a href="">Ayuda</a></li>
 
-        </center>
-        <div class="caja2">
-        <div class= "estructura"></div>
+            </ul>
 
-        <div class= "circulo"> <div class= "camión">
-            <i class="fas fa-truck"></i>
-        </div></div>
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 
-        
-        <div class="precio">
-      
-        <p>$6.770</p> </div>
-            <p>40% OFF</p>
-            <div class= "descripcion">
-            <h4>Cafetera Moulinex/<h4>
-            </div>
-</article>
+            <ul>
 
+                <li><a href="">Creá tu cuenta</a>
 
-<article>
-            <center>
-                <div class="caja"  >
-                    <div class="palabra"><h3>Ofertas</h3></div>
-                <img src = "/images/img-macbook-pro-2019.jpg" alt= ""
-                style="width: 250px;
-       
-                height: 250px;
-                margin-top: 35px;">
+                    <a href=""><i class="fas fa-id-card"></i></a>
+                </li>
 
-            </center>
-            <div class="caja2">
-            <div class= "estructura"></div>
-            <div class= "circulo"> <div class= "camión">
-                <i class="fas fa-truck"></i>
-            </div></div>
+                <li><a href="">Ingresá</a>
 
-                <div class="precio">
-                  
-                <p>$230.000</p> </div>
-                    <p>20% OFF</p>
-                    <div class= "descripcion">
-                    <h4>MacBook Pro 2019</h4>
+                    <a href=""><i class="fas fa-sign-in-alt"></i></a>
+                </li>
+
+                <li><a href="">Mis compras</a>
+
+                    <a href=""><i class="fas fa-shopping-basket"></i></a>
+                </li>
+            </ul>
+
+        </nav>
+
+        <div class="burger-menu">
+
+            <i class="fas fa-bars"></i>
+        </div>
+
+    </header>
+
+    <img class="banner2" src="/images/img-home-banner.jpg" alt="">
+    <main class="contenedor-menu">
+
+        <section>
+            <h2>Basado en tu última visita</h2>
+
+            <article>
+                <img width="100%" src="/images/img-cafetera-moulinex.jpg" alt="">
+
+                <div class="contenedor-articulos">
+                    <div class="camión">
+                        <i class="fas fa-truck"></i>
+                    </div>
+
+                    <p>$6.770</p>
+
+                    <p>40% OFF</p>
+
+                    <h4>Cafetera Moulinex</h4>
+
                 </div>
 
-                    </article>
-                
-    <article>
-                        
-            <center>
-                <div class="caja"  >
-                    <div class="palabra"><h3>Ofertas</h3></div>
-                        <img src = "/images/img-samsung-galaxy-s10.jpg" alt= ""
+            </article>
 
-                        style="width: 250px;
-       
-                        height: 250px;
-                        margin-top: 35px;">
-                        
-            </center>
-            <div class="caja2">
-            <div class= "estructura"></div>
+            <article>
 
-            <div class= "circulo"> <div class= "camión">
-                <i class="fas fa-truck"></i>
-            </div></div>
-                        <div class="precio">
-                      
-                        <p>$70.500</p> </div>
-                            <p>10% OFF</p>
-                            <div class= "descripcion">
-                            <h4>Samsung Galaxy S10</h4>
-                        </div>
-                        </article>
-<article>
+                <img width="100%" src="/images/img-macbook-pro-2019.jpg" alt="">
+
+                <div class="contenedor-articulos">
+                    <div class="camión">
+                        <i class="fas fa-truck"></i>
+                    </div>
+
+                    <p>$230.000</p>
+
+                    <p>20% OFF</p>
+
+                    <h4>MacBook Pro 2019</h4>
+                </div>
+            </article>
+
+            <article>
 
 
-                            <center>
-                                <div class="caja"  >
-                                    <div class="palabra"><h3>Ofertas</h3></div>
+                <img width="100%" src="/images/img-samsung-galaxy-s10.jpg" alt="">
+                <div class="contenedor-articulos">
+                    <div class="camión">
+                        <i class="fas fa-truck"></i>
+                    </div>
 
-                                <img src = "/images/img-tv-samsung-smart.jpg" alt= ""
-                                style="width: 250px;
-       
-                                height: 250px;
-                                margin-top: 35px;">
+                    <p>$70.500</p>
 
-                            </center>
-                            <div class="caja2">
-                            <div class= "estructura"></div>
+                    <p>10% OFF</p>
 
-                            <div class= "circulo"> <div class= "camión">
-                                <i class="fas fa-truck"></i>
-                            </div></div>
+                    <h4>Samsung Galaxy S10</h4>
+                </div>
 
-                                <div class="precio">
-                                   
-                                <p>$23.200</p> </div>
-                                    <p>5% OFF</p>
-                                    <div class= "descripcion">
-                                    <h4>SmartTv Samsung 43"</h4>            
-                                </div>
+            </article>
+            <article>
+
+                <img width="100%" src="/images/img-tv-samsung-smart.jpg" alt="">
+                <div class="contenedor-articulos">
+                    <div class="camión">
+                        <i class="fas fa-truck"></i>
+                    </div>
+
+                    <p>$23.200</p>
+
+                    <p>5% OFF</p>
+
+                    <h4>SmartTv Samsung 43"</h4>
+                </div>
+            </article>
+        </section>
+
+        <section>
+            <h2>Ofertas</h2>
+            <article>
+
+                <img width="100%" src="/images/img-cafetera-moulinex.jpg" alt="">
+                <div class="contenedor-articulos">
+                    <div class="camión">
+                        <i class="fas fa-truck"></i>
+                    </div>
+
+                    <p>$6.770</p>
+
+                    <p>40% OFF</p>
+
+                    <h4>Cafetera Moulinex/<h4>
+                </div>
+            </article>
+
+            <article>
+
+                <img width="100%" src="/images/img-macbook-pro-2019.jpg" alt="">
+                <div class="contenedor-articulos">
+                    <div class="camión">
+                        <i class="fas fa-truck"></i>
+                    </div>
+
+                    <p>$230.000</p>
+
+                    <p>20% OFF</p>
+
+                    <h4>MacBook Pro 2019</h4>
+                </div>
+            </article>
+            <article>
+
+                <img width="100%" src="/images/img-samsung-galaxy-s10.jpg" alt=" ">
+                <div class="contenedor-articulos">
+                    <div class="camión">
+                        <i class="fas fa-truck"></i>
+                    </div>
+
+                    <p>$70.500</p>
+
+                    <p>10% OFF</p>
+
+                    <h4>Samsung Galaxy S10</h4>
+                </div>
+            </article>
+            <article>
+
+                <img width="100%" src="/images/img-tv-samsung-smart.jpg" alt="">
+                <div class="contenedor-articulos">
+                    <div class="camión">
+                        <i class="fas fa-truck"></i>
+                    </div>
+
+                    <p>$23.200</p>
+
+                    <p>5% OFF</p>
+
+                    <h4>SmartTv Samsung 43"</h4>
+                </div>
+            </article>
+        </section>
+
+    </main>
+
+    <footer>
+
+        <section>
+
+            <article>
+                <div class="icono-footer">
+                    <i class="fas fa-credit-card"></i>
+                </div>
 
 
-    </article>
-    </section>
-
-</main>
-
-
-
+                <h3>Pagá con tarjeta de crédito o en efectivo</h3>
+                <P>Con Mercado Liebre Cash, tenés cuotas sin
+                    interés con tarjeta o efectivo en
+                    puntos de
+                    pago. ¡Y siempre es seguro!</P>
 
 
-<footer>
+
+            </article>
+
+            <article>
+                <div class="icono-footer">
+                    <i class="fas fa-gift"></i>
 
 
-    <section>
-<br>
-
-        <article>
-        <div class="tarjeta">
-        <i class="fas fa-credit-card"></i>
-</div>
-
-<div class="crédito">
-<h4>Pagá con tarjeta de crédito o en efectivo</h4>
-<P>Con Mercado Liebre Cash, tenés cuotas sin</P> <p>interés con tarjeta o efectivo en
-    puntos de</p><P> pago. ¡Y siempre es seguro!</P>
-    </div>
+                </div>
 
 
-</article>
 
-<article>
-        <div class="regalo">
-        <i class="fas fa-gift"></i>
-
-       
-</div>
+                <H3>Envío gratis desde los $ 2.500</H3>
+                <P>Solo por estar registrad@ en MercadoLiebre
+                    tenés envíos gratis en miles de
+                    productos. Es
+                    un beneficio de MercadoPuntos.</P>
 
 
-        <div class="crédito">
-<section>
-    <H3>Envío gratis desde los $ 2.500</H3>
-    <P>Solo por estar registrad@ en MercadoLiebre</P> <P>tenés envíos gratis en miles de
-        productos. Es </p> <p>un beneficio de MercadoPuntos.</P>
-    </div>
-   
-</article>
-<article>
+            </article>
+            <article>
 
-            <div class="usuario">
+                <div class="icono-footer">
 
-                <i class="fas fa-user-shield"></i>
-        
-            </div>
+                    <i class="fas fa-user-shield"></i>
+
+                </div>
 
 
-            <div class="crédito">
-      
-            <H3>Seguridad de principio a fin</H3>
-            <P> ¿No te gusta? ¡Devolvelo! En Mercado Liebre</P> <p>no hay nada que no puedas hacer
-                porque </p> <p>  estás siempre protegid@.</P>
-            </div>
-        
-            
-</article>        
-    
-                <P>Copyright © 1999-2020 MercadoLiebre S.R.L.</P>
-              
-                    
-</section>
-</footer>
+
+                <H3>Seguridad de principio a fin</H3>
+                <P> ¿No te gusta? ¡Devolvelo! En Mercado Liebre
+                    no hay nada que no puedas hacer
+                    porque
+                    estás siempre protegid@.</P>
+
+
+
+            </article>
+
+            <P>Copyright © 1999-2020 MercadoLiebre S.R.L.</P>
+
+
+        </section>
+    </footer>
 
 
 
