--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,11 @@
 
 
+* {
+
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 :root {
    --color-icono: #0000CD;
@@ -10,598 +16,147 @@
 }
 
 
+li {
+    list-style: none;
+   
+}
+
+a{
+text-decoration: none;
+color: black;
+}
 
 body {
 
-
-
-   
-    margin:0;
-    
- min-height: 100%;
-  
-
-
+    font-family: var(--tipografia);
+    background-color: #ebebeb;
 
 }
-
-
-
-
-
 
 header {
 
-
-    width: 100%;
-background-color:  #EAC926;
-
-
-font-family: var(--tipografia);
+    background-color:  #EAC926;
+    font-size: 12px;
+    padding: 30px 0px 10px;
 
 }
-
-
-
-
-
 
 .logo {
 
-  padding-top:  10px;
-  padding-left:  30px;
-  
+    width: 130px;
+    margin-left: 25px;
+    margin-bottom: 15px;
+}
 
-  
+.buscador, .icono-buscador{
+
+   margin-left: 25px;
 
 }
 
+.banner2{
 
-li {
-    list-style: none;
-color: black;
-
-   
+    width: 100%;
 }
 
+header p {
 
-
-a{
-text-decoration: none}
-
-
-H3{
-
-font-size: 20PX;
-
-
-}
-
-
-P{
-
-    font-size: 12PX;
-
-  
+    text-align: center;
+    margin: 10px 0px;
+    font-size: 12px;
     }
 
+header nav ul {
 
-    section P {
-
-        font-size: 16PX;
-
-
-    }
-
-   .precio p
-   {
-
-    font-size: 18PX;
-    margin-bottom:-20px;
-  
-  
-
+        display:none;
 }
-
-
-
-
-.descripcion {
-
-    display: none;
-}
-
-ul li p  {
-
-    text-align: var(--alineacion-texto);
-
-
-    font-size: 18PX;
-
-   
-}
-
-
-
-
-
 
 .burger-menu{
-    
-   
 
     background-color:  #0000CD;
     color: white;
-    display: block;
- max-width: 70px;
- padding: 8px 0;
-
- border-radius: 15px;
- text-align:center;
- font-size: 35px;
-margin: auto;
-
-
-
+    width: 40px;
+    padding: 8px 0;
+    border-radius: 15px;
+    text-align:center;
+    font-size: 20px;
+    margin: 20px auto 30px;
 }   
-   
 
-  
-
-
-.crédito{
-   
-text-align: var(--alineacion-texto);
-line-height: 1px;
-margin-bottom: 50px;
+/*         main                */
 
 
+main.contenedor-menu {
+    width:90%;
+    margin:0 auto;
 
 }
 
 
+main .contenedor-articulos{
 
-nav ul li a{
-
-
-    color: black;
+        background-color: white;
+        border-top: 1px solid #ebebeb;
+    
 }
 
+main article {
 
-ul li p span{
+    margin: 15px 0px;
 
-    color: black;
 }
 
+.camión {
+    color: green;
+    width: 40px;
+    height: 40px;
+    border: 1px solid green;
+    border-radius: 50%;
+}
 
+h3 {
+
+    font-size: 15px;
+
+}
+
+footer article{
+
+    text-align: center;
+}
  
-.box{
+footer p{
 
-    
-    position: absolute;
-    top: 17%;
-    left: 35%;
-    transform: translate(-50%, -50%);
+    font-size: 12px;
+}
 
+.icono-footer{
 
-
-
- 
+    color:#2929f8;
+    font-size: 25px;
   
-}
-
-
-.lupa
-
-{
-
-    position: absolute;
-    top: 112px;
-    right: 18%;
-  
-    transform: translate(-50%, -50%);
     
 }
 
+@media screen and (min-width: 361px){
 
-.items{
-    display: none;
+    main article {
 
-    }
-
-
-
-        .tarjeta
-
-        {
-
-            top: 70%;
-            left: 500%;
-            transform: translate(268%, 5%);
-
-
-            font-size: 2em;
-        
-            color: var(--color-icono);
-        
-        
-            width: 60px;
-        
-            height: 30px;
-        
-           
-        
-            border-radius: 5px;
-   
-            line-height: 1px
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
 
         }
 
+    .burger-menu{
 
-        .usuario
-
-        {
-
-            top: 70%;
-            left: 500%;
-            transform: translate(268%, 5%);
-
-
-            font-size: 2em;
-        
-            color: var(--color-icono);
-        
-        
-            width: 60px;
-        
-            height: 30px;
-        
-           
-        
-            border-radius: 5px;
-   
-            line-height: 1px
-
-
-            
+        display: none;
 
         }
 
+    header nav ul{
 
-        .regalo
-
-        {
-
-            top: 70%;
-            left: 500%;
-            transform: translate(268%, 5%);
-
-
-            font-size: 2em;
-        
-            color: var(--color-icono);
-        
-        
-            width: 60px;
-        
-            height: 30px;
-        
-           
-        
-            border-radius: 5px;
-   
-            line-height: 1px
-
-        }
-
-        .cuotas{
-
-            font-size: 14px;
-            text-align: var(--alineacion-texto);;
-           padding: 10%;
-           margin-bottom: -8%;
-           margin-top: 30px;
-       
-        
-        }
-
-       nav ul li {
-            margin-left: -8%;
-           
-         
-          
-        }
-
-
-       
-
-
-        .camión {
-
-            color:green;
-            padding: 8px;
-           
-        }
-
-        .circulo {
-
-            width: 60px;
-            height:60px;
-            background-color: white;
-            border-radius: 50%;
-            border-color: green;
-            border-style: solid;
-          
-            
-
-        }
-
-        .caja {
-
-            background: white;
-            height: 100%;
-            width: 100%;
-            padding: 50px;
-            padding-top: 10%;
-          padding-left: 5%;
-          padding-right: 5%;
-          border-bottom: none;
-            border: 10px solid skyblue;
-      border-top: 50px solid skyblue;
-     border-left: 10px solid skyblue;
-     border-bottom: white;
-            box-sizing: border-box;
-            box-shadow: 0px 0px 900px rgb(100, 100, 100);
-        
-        
-        }
-
-        .caja2{
-
-
-
-            background: white;
-            height: 100%;
-            width: 100%;
-            padding: 50px;
-            padding-top: 10%;
-          padding-left: 5%;
-          padding-right: 5%;
-
-          padding-bottom: 1%;
-
-
-            border: 10px solid skyblue;
-      border-top: 1px solid white;
-     border-left: 10px solid skyblue;
-            box-sizing: border-box;
-
-        }
-          
-
+        display:block;
     
-
-
-        .estructura{
-
-
-
-          width: 100%;
-    
-            
-            background: white;
-           border-top-style: solid;
-           border-color: #ebebeb;
-            margin-bottom: 15px;
-            margin-left:15px;
-            margin-right:15px;
-            border-style: 1px;
-          margin-top: -90px;
-            
-          
         }
 
-
-        .palabra{
-           text-align: left;
-           margin-top: -90px;
-           background-color: skyblue;
-           line-height: 2px;
-           
-        }
-    
-
-    
-      
-    
-    
-        @media(min-device-width: 361px){
-
-
-
-
-           
-
-            .descripcion {
-
-                display: flex;
-            }
-        .caja{
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
-
+        
 }
-
-    .items{
-        display: flex;
-
-        }
-
-       
-        nav div{
-             
-            display: none;
-            }
-
-
-
-
-            .burger-menu{
-    
-   
-             
-               display: none;
-            
-            
-            
-            }   
-
-
-
-            .box{
-
-    
-                position: absolute;
-                top: 17%;
-                left: 18%;
-                transform: translate(-50%, -50%);
-          
-            
-            
-            
-             
-              
-            }
-            
-            
-            .lupa
-            
-            {
-            
-                position: absolute;
-                top: 115px;
-                left: 50%;
-                transform: translate(-50%, -50%);
-               
-            }
-
-            .items {
-                margin-left: -2%;
-              margin-bottom: -18%;
-         
-              
-            }
-            .cuotas{ padding-top: 50px;
-            }
-          
-
-            .palabra{
-             
-                text-align: left;
-                margin-top: -135px;
-                background-color: skyblue;
-                line-height: 2px;
-
-             }
-
-           
-             .tarjeta
-
-             {
-     
-                 top: 70%;
-                 left: 500%;
-                 transform: translate(600%, 5%);
-     
-     
-                 font-size: 2em;
-             
-                 color: var(--color-icono);
-             
-             
-                 width: 60px;
-             
-                 height: 30px;
-             
-                
-             
-                 border-radius: 5px;
-        
-                 line-height: 1px
-     
-             }
-     
-     
-             .usuario
-     
-             {
-     
-                 top: 70%;
-                 left: 500%;
-                 transform: translate(600%, 5%);
-     
-     
-                 font-size: 2em;
-             
-                 color: var(--color-icono);
-             
-             
-                 width: 60px;
-             
-                 height: 30px;
-             
-                
-             
-                 border-radius: 5px;
-        
-                 line-height: 1px
-     
-     
-                 
-     
-             }
-     
-     
-             .regalo
-     
-             {
-     
-                 top: 70%;
-                 left: 500%;
-                 transform: translate(600%, 5%);
-     
-     
-                 font-size: 2em;
-             
-                 color: var(--color-icono);
-             
-             
-                 width: 60px;
-             
-                 height: 30px;
-             
-                
-             
-                 border-radius: 5px;
-        
-                 line-height: 1px
-     
-             }
-          
-
-
-
-        }
-
-
-
-
-
-
-        
-
-
-
-       
-
-
-        
