--- a/views/home.html
+++ b/views/home.html
@@ -23,16 +23,16 @@
 
         <div class="buscador">
 
-            <input type="text" placeholder="Buscar productos, marcas" name="search">
+            <input type="text" placeholder="Buscar productos, marcas" name="search"><button class="icono-buscador">
+
+
+                <i class="fa fa-search">
+                </i>
+            </button>
 
         </div>
 
-        <button class="icono-buscador">
-
-
-            <i class="fa fa-search">
-            </i>
-        </button>
+        
 
 
         <p><a href=""><i class="fas fa-hand-holding-usd"></i> </a> Comprá en cuotas y sin tarjeta de crédito</p>
@@ -92,8 +92,9 @@
 
                     <p>$6.770</p>
 
+                    <div class="letra-verde">
                     <p>40% OFF</p>
-
+                </div>
                     <h4>Cafetera Moulinex</h4>
 
                 </div>
@@ -110,9 +111,9 @@
                     </div>
 
                     <p>$230.000</p>
-
+                    <div class="letra-verde">
                     <p>20% OFF</p>
-
+                        </div>
                     <h4>MacBook Pro 2019</h4>
                 </div>
             </article>
@@ -127,9 +128,9 @@
                     </div>
 
                     <p>$70.500</p>
-
+                    <div class="letra-verde">
                     <p>10% OFF</p>
-
+                        </div>
                     <h4>Samsung Galaxy S10</h4>
                 </div>
 
@@ -143,9 +144,9 @@
                     </div>
 
                     <p>$23.200</p>
-
+                    <div class="letra-verde">
                     <p>5% OFF</p>
-
+                        </div>
                     <h4>SmartTv Samsung 43"</h4>
                 </div>
             </article>
@@ -162,9 +163,9 @@
                     </div>
 
                     <p>$6.770</p>
-
+                    <div class="letra-verde">
                     <p>40% OFF</p>
-
+                        </div>
                     <h4>Cafetera Moulinex/<h4>
                 </div>
             </article>
@@ -178,9 +179,9 @@
                     </div>
 
                     <p>$230.000</p>
-
+                    <div class="letra-verde">
                     <p>20% OFF</p>
-
+                        </div>
                     <h4>MacBook Pro 2019</h4>
                 </div>
             </article>
@@ -193,9 +194,9 @@
                     </div>
 
                     <p>$70.500</p>
-
+                    <div class="letra-verde">
                     <p>10% OFF</p>
-
+                        </div>
                     <h4>Samsung Galaxy S10</h4>
                 </div>
             </article>
@@ -208,9 +209,9 @@
                     </div>
 
                     <p>$23.200</p>
-
+                    <div class="letra-verde">
                     <p>5% OFF</p>
-
+                    </div>
                     <h4>SmartTv Samsung 43"</h4>
                 </div>
             </article>
@@ -274,6 +275,7 @@
 
 
             </article>
+            <br>
 
             <P>Copyright © 1999-2020 MercadoLiebre S.R.L.</P>
 
