--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,22 +43,43 @@ header {
 
 .logo {
 
-    width: 130px;
-    margin-left: 25px;
+    width: 100px;
+    margin-left: 10px;
     margin-bottom: 15px;
+   
+
 }
 
 .buscador {
    
-    margin-left: 17px;
-   
+    margin-left: 10px;
+    width: 100px;
+
+
 }
+
+
+
 
 .icono-buscador{
-
-    margin-left: 5px;
+   
+    margin-left: 60px;
+    height: 60%;
+    background-color:white;
+    
 
 }
+
+    .logo_buscador{
+
+        display:flex;
+      height: 50%;
+        
+        
+        
+        }
+
+
 
 
 .banner2{
@@ -84,7 +105,7 @@ header nav ul {
     color: white;
     width: 40px;
     padding: 8px 0;
-    border-radius: 15px;
+    border-radius: 5px;
     text-align:center;
     font-size: 20px;
     margin: 20px auto 30px;
@@ -94,16 +115,31 @@ header nav ul {
 
 
 main.contenedor-menu {
+
     width:90%;
     margin:0 auto;
+    
+   
 
 }
+
+.articulos{
+
+        display:flex;
+        padding: 15px;
+}
+
+
 
 main .contenedor-articulos{
   
         border-top: 1px solid #ebebeb;
     
 }
+
+
+
+
 
 main article {
 
@@ -112,16 +148,43 @@ main article {
 }
 
 .camión {
-    color: green;
-    width: 40px;
-    height: 40px;
-    border: 1px solid green;
-    border-radius: 50%;
+    
+      
+    
+        padding: 0px;
+        box-sizing: border-box;
+       color:#39b54a;
+       text-align: right;
+       margin: -15px 15px;
+     
+       
+       
 }
 
+
+main section article i{
+    display: block;
+    font-size: 16px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #39b54a;
+    background-color: #FFF;
+    border-radius: 50%;
+   
+
+    
+   
+}
+
+.precio-final{
+
+    width: 30%;;
+}
 .letra-verde{
 
     color:green;
+    width: 70%;
 }
 
 h3 {
@@ -177,9 +240,66 @@ footer p{
     
         }
 
+
+       .contenedor1{
+
+        display:flex;
+        justify-content: space-between;
+       
+       }
+
+       .mano{
+
+        margin-right: 25px;
+       }
+     
+
+       .buscador {
+   
+        margin-left: 25px;
+        margin-top: 5px
+       }
+
+        
+       .icono-buscador{
+   
+        margin-top: 5px;
+        margin-left: 70px;
+        
+        
+    
+    }
+    .listado{
+
+        display:flex;
+        justify-content: space-between;
+    
+        }
+
+    .listado ul{
+
+        display:flex;
+        margin-top: 20px;
+    }
+
+    .listado li {
+
+        margin: 0 6px;
+    }
+    
+    
+    
+   
+
+
+
+
+
+
     h4 {
 
         display:flex;
+        padding: 15px;
     }
 
     li {
@@ -195,5 +315,59 @@ footer p{
 
 
 
-        
+
+
+
+    .dosfotos{
+
+        display:flex;
+    }
+
+    .dosfotos2{
+
+        display:flex;
+    }
+
+
+    .letra-verde{
+
+        display:flex;
+     margin-left: 30px;
+     margin-top: 5px;
+     font-size: 11px;
+      
+    
+      
 }
+  
+    }
+
+   
+    
+
+
+
+    @media(min-width: 769px){
+
+
+
+        .contenedor-menu{
+
+            display:flex;
+
+    }
+
+
+
+    .letra-verde{
+
+        display:flex;
+     margin-left: 30px;
+     margin-top: 5px;
+     font-size: 11px;
+      
+    
+      
+}
+       
+    }
