inicio de formulario

--- a/views/home.html
+++ b/views/home.html
@@ -54,12 +54,12 @@
 
             <ul>
 
-                <li><a href="">Creá tu cuenta</a>
+                <li><a href="http://localhost:3030/register">Creá tu cuenta</a> 
 
                     <a href=""><i class="fas fa-id-card"></i></a>
                 </li>
 
-                <li><a href="">Ingresá</a>
+                <li><a href="http://localhost:3030/login">Ingresá</a>
 
                     <a href=""><i class="fas fa-sign-in-alt"></i></a>
                 </li>
@@ -72,12 +72,31 @@
 
         </nav>
 
+
+
+
         <div class="burger-menu">
+
+
+            
 
             <i class="fas fa-bars"></i>
         </div>
+            
+
+
+
+
+
+
+
+
 
        </header>
+
+
+
+
 
         <img class="banner2" src="/images/img-home-banner.jpg" alt="">
 
