--- a/views/login.html
+++ b/views/login.html
@@ -82,32 +82,78 @@
 
        <form action="/login" method="POST" class="create-form">
        
-    <div>
+    <div class="control_form2">
                 <label>Nombre del usuario</label>
     
-                <input type="text" name="usuario" placeholder="usuario">
+                <input type="text" name="usuario" placeholder="usuario" class="control">
             </div>
             <span class="texto_error">Error de usuario</span>
-            <div>
+            
+            <div class="control_form2">
                 <label>Contraseña</label>
         
-                    <input type="contraseña" name="contraseña" placeholder="contraseña">
+                    <input type="contraseña" name="contraseña" placeholder="contraseña" class="control">
         </div>
 
-
-   
-
-    <div>
-      
-        <span class="texto_error">Error de contraseña</span>
+        <span class="texto_error" class="text_error">Error de contraseña</span>
        
-        
-    
-    </div>
-            <button type="submit"><a href="http://localhost:3030">ENVIAR</a>
+            <button type="submit" class="boton_form1"><a href="http://localhost:3030">ENVIAR</a>
             </button>
            
-
-
+            <footer>
+                <section>
+    
+                    <article>
+                        <div class="icono-footer">
+                            <i class="fas fa-credit-card"></i>
+                        </div>
+        
+        
+                        <h3>Pagá con tarjeta de crédito o en efectivo</h3>
+                        <P>Con Mercado Liebre Cash, tenés cuotas sin
+                            interés con tarjeta o efectivo en
+                            puntos de
+                            pago. ¡Y siempre es seguro!</P>
+        
+                    </article>
+        
+                    <article>
+                        <div class="icono-footer">
+                            <i class="fas fa-gift"></i>
+        
+                        </div>
+        
+                        <H3>Envío gratis desde los $ 2.500</H3>
+                        <P>Solo por estar registrad@ en MercadoLiebre
+                            tenés envíos gratis en miles de
+                            productos. Es
+                            un beneficio de MercadoPuntos.</P>
+        
+                    </article>
+                    <article>
+        
+                        <div class="icono-footer">
+        
+                            <i class="fas fa-user-shield"></i>
+        
+                        </div>
+        
+                        <H3>Seguridad de principio a fin</H3>
+                        <P> ¿No te gusta? ¡Devolvelo! En Mercado Liebre
+                            no hay nada que no puedas hacer
+                            porque
+                            estás siempre protegid@.</P>
+        
+                    </article>
+                    <br>
+        
+                    <P>Copyright © 1999-2020 MercadoLiebre S.R.L.</P>
+        
+                </section>
+            </footer>
+        
+        </body>
+        
+        </html>
 
 
