--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -190,12 +190,75 @@ footer p{
 
     color:#2929f8;
     font-size: 25px;
+    margin-top: 15px;
     
 }
 
 
 .create-form{
     padding: 20px 15px;
+}
+
+
+
+/*-------------------------------------------------register----------------------------------------------*/
+
+.create-form{
+    padding: 20px 15px;
+   
+}
+
+.control_form{
+    margin-bottom: 15px;
+}
+
+.control_form label{
+    margin-bottom: 5px;
+    display:block;
+}
+
+.control{
+    width: 100%;
+    padding: 8px;
+}
+
+.boton_form{
+
+    background-color:#2929f8;
+    border: none;
+    font-size: 20px;
+    color: black;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+/*-----------------------------------------------login---------------------------------------------------*/
+
+.boton_form1{
+    background-color:#2929f8;
+    border: none;
+    font-size: 20px;
+    color: black;
+    padding: 5px 10px;
+    border-radius: 5px;
+    width: 100%;
+    margin-top: 50px;
+}
+
+.texto_error{
+    color: red;
+    font-size: 10px;
+    margin-bottom: 50px; 
+}
+
+.boton_form2{
+    background-color:#2929f8;
+    border: none;
+    font-size: 20px;
+    color: black;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin-bottom: 15px;
 }
 
 @media screen and (min-width: 361px){
