--- a/views/register.html
+++ b/views/register.html
@@ -33,7 +33,6 @@
                 </i>
             </button>
        
-       
         </div>
 
         <div class="mano">
@@ -79,41 +78,36 @@
 
        </header>
 
-
-
 <form action="/registro" method="POST" class="create-form">
-    <div>
+    <div class="control_form">
         <label>Nombre y apellido</label>
 
-            <input type="text" name="nombre" placeholder="nombre y apellido">
+            <input type="text" name="nombre" placeholder="nombre y apellido" class="control">
 </div>
-<div>
+<div class="control_form">
             <label>Nombre del usuario</label>
 
-            <input type="text" name="usuario" placeholder="usuario">
+            <input type="text" name="usuario" placeholder="usuario" class="control">
         </div>
-        <div>
+        <div class="control_form">
             <label>Fecha de nacimiento</label>
-            <input type="date" name="fecha">
+            <input type="date" name="fecha" class="control">
            
-
-          
         </div>
-        <div>
+        <div class="control_form">
             <label>Domicilio</label>
 
-            <input type="text" name="Domicilio" placeholder="domicilio">
+            <input type="text" name="Domicilio" placeholder="domicilio" class="control">
         </div>
-        <div>
+        <div class="control_form">
             <label>Perfil del usuario</label>
-            <select name= "perfil">
+            <select name= "perfil" class="control">
                 <option value="Comprar">Comprar</option>
                 <option value="Vender">Vender</option>
                
             </select>
 
-
-            <div>
+            <div class="control_form">
                 <label>Intereses</label>
                 <label>Electro</label>
                 <input type="checkbox" name="Interés" value="Electro">
@@ -127,33 +121,81 @@
                 <input type="checkbox" name="Interés" value="Vida sana">
             </div>
 
-<div> 
+<div class="control_form"> 
     <label>Foto de usuario</label>
-    <input type="file" name="avatar" accept=".jpg" multiple>
+    <input type="file" name="avatar" accept=".jpg" multiple class="control">
 
         </div>
 
-        <div>
+        <div class="control_form">
             <label>Contraseña</label>
 
-            <input type="contraseña" name="contraseña" placeholder="contraseña">
+            <input type="contraseña" name="contraseña" placeholder="contraseña" class="control">
         </div>
 
-        <div>
+        <div class="control_form">
             <label>Cambiar contraseña</label>
 
-            <input type="Cambiar contraseña" name="Cambiar contraseña" placeholder="Cambiar contraseña">
+            <input type="Cambiar contraseña" name="Cambiar contraseña" placeholder="Cambiar contraseña" class="control">
         </div>
         
-
-    <button type="submit"><a href="http://localhost:3030">ENVIAR</a></button>
-    <button type="reset">BORRAR</button>
-
-
-
-   
-
-
-
+    <button type="submit"class="boton_form"><a href="http://localhost:3030">ENVIAR</a></button>
+    <button type="reset" class="boton_form">BORRAR</button>
 
 </form>
+
+<footer>
+    <section>
+
+        <article>
+            <div class="icono-footer">
+                <i class="fas fa-credit-card"></i>
+            </div>
+
+
+            <h3>Pagá con tarjeta de crédito o en efectivo</h3>
+            <P>Con Mercado Liebre Cash, tenés cuotas sin
+                interés con tarjeta o efectivo en
+                puntos de
+                pago. ¡Y siempre es seguro!</P>
+
+        </article>
+
+        <article>
+            <div class="icono-footer">
+                <i class="fas fa-gift"></i>
+
+            </div>
+
+            <H3>Envío gratis desde los $ 2.500</H3>
+            <P>Solo por estar registrad@ en MercadoLiebre
+                tenés envíos gratis en miles de
+                productos. Es
+                un beneficio de MercadoPuntos.</P>
+
+        </article>
+        <article>
+
+            <div class="icono-footer">
+
+                <i class="fas fa-user-shield"></i>
+
+            </div>
+
+            <H3>Seguridad de principio a fin</H3>
+            <P> ¿No te gusta? ¡Devolvelo! En Mercado Liebre
+                no hay nada que no puedas hacer
+                porque
+                estás siempre protegid@.</P>
+
+        </article>
+        <br>
+
+        <P>Copyright © 1999-2020 MercadoLiebre S.R.L.</P>
+
+    </section>
+</footer>
+
+</body>
+
+</html>
