--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,31 +43,41 @@ header {
 
 .logo {
 
-    width: 100px;
+    width: 120px;
     margin-left: 10px;
     margin-bottom: 15px;
    
 }
 
 .buscador {
-   
+    
     margin-left: 10px;
     width: 100px;
+
 
 }
 
 .icono-buscador{
    
+   
     margin-left: 60px;
     height: 60%;
     background-color:white;
+
+
+    
     
 }
 
     .logo_buscador{
-
+        width:100%;
         display:flex;
       height: 50%;
+      
+     
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
         
 }
 
@@ -173,7 +183,9 @@ h4 {
 
 footer {
 
+    padding-top: 25px;
     background-color: white;
+
 }
 
 footer article{
@@ -193,13 +205,34 @@ footer p{
     
 }
 
+
 @media screen and (min-width: 361px){
 
+
+
+
+
+
+main{
+
+    flex-wrap: wrap;
+    width: 125%;
+   
+   
+}
+
+
+
+header{
+    flex-wrap: wrap;
+    width: 125%;
+   
+}
 
 main article {
 
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
-        
+    margin: 48px;
 
 }
 
@@ -217,9 +250,13 @@ header nav ul{
 
 .contenedor1{
 
+
+
+    margin: auto;
     display:flex;
     justify-content: space-between;
-        
+    
+
     }
 
 .mano{
@@ -230,8 +267,8 @@ header nav ul{
      
 .buscador {
    
-        margin-left: 25px;
-        margin-top: 5px
+        align-content: center;
+       
 }
 
 .icono-buscador{
@@ -239,8 +276,18 @@ header nav ul{
         margin-top: 5px;
         margin-left: 70px;
     
+        margin-top: 0px;
+
 }
     
+
+
+
+
+
+
+
+
 .listado{
 
     display:flex;
@@ -277,12 +324,17 @@ li {
 
     width: 100%;
     display:flex;
+    flex-wrap: wrap;
+    width: 125%;
+   
 
 }
 
 .dosfotos{
 
     display:flex;
+    
+    
     
 }
 
@@ -300,10 +352,29 @@ li {
      font-size: 11px;
      
 }
+
+footer {
+
+    display: flex;
+    flex-direction: column;
+    width: 125%;
+
+}
+
+
+
   
     }
 
 @media(min-width: 769px){
+
+
+    main article {
+
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        margin: 23px;
+    
+    }
 
 .contenedor-menu{
 
@@ -319,5 +390,15 @@ li {
     font-size: 11px;
          
 }
+footer{
+
+    display: flex;
+    flex-direction: column;
+    width: 125%;
+
+}
+
+
+
        
     }
