--- a/views/home.html
+++ b/views/home.html
@@ -26,11 +26,12 @@
 
             <input type="text" placeholder="Buscar productos, marcas" name="search">
         </div>
+
             <button class="icono-buscador">
         
 
-                <i class="fa fa-search">
-                </i>
+                <i class="fa fa-search"></i>
+
             </button>
        
        
