--- a/views/login.html
+++ b/views/login.html
@@ -78,7 +78,7 @@
         </div>
 
        </header>
-
+       <main class="login">
 
        <form action="/login" method="POST" class="create-form">
        
@@ -99,7 +99,7 @@
        
             <button type="submit" class="boton_form1"><a href="http://localhost:3030">ENVIAR</a>
             </button>
-           
+        </main>
             <footer>
                 <section>
     
