--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -202,6 +202,9 @@ footer p{
 
 
 /*-------------------------------------------------register----------------------------------------------*/
+.register{
+    max-width: 400px;
+}
 
 .create-form{
     padding: 20px 15px;
@@ -222,17 +225,35 @@ footer p{
     padding: 8px;
 }
 
+.boton_form a{
+    color: white;
+}
+
 .boton_form{
 
     background-color:#2929f8;
     border: none;
     font-size: 20px;
-    color: black;
+    color: white;
     padding: 5px 10px;
     border-radius: 5px;
 }
 
 /*-----------------------------------------------login---------------------------------------------------*/
+
+.login{
+    max-width: 400px;
+   
+}
+.login main{
+
+    background-color: #0000CD;
+}
+
+.boton_form1 a{
+    color: white
+}
+
 
 .boton_form1{
     background-color:#2929f8;
@@ -264,10 +285,17 @@ footer p{
 @media screen and (min-width: 361px){
 
 
+
+    header{
+        flex-wrap: wrap;
+        width: 120%;
+       
+    }
+
 main article {
 
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
-        
+    margin: 48px;
 
 }
 
@@ -285,6 +313,7 @@ header nav ul{
 
 .contenedor1{
 
+   
     display:flex;
     justify-content: space-between;
         
@@ -343,14 +372,18 @@ li {
 
 .banner2{
 
-    width: 100%;
+    
     display:flex;
+    
+    flex-wrap: wrap;
+    width: 120%;
 
 }
 
 .dosfotos{
 
     display:flex;
+    width: 100%;
     
 }
 
@@ -367,6 +400,14 @@ li {
      margin-top: 5px;
      font-size: 11px;
      
+}
+
+footer {
+
+    display: flex;
+    flex-direction: column;
+    width: 120%;
+
 }
   
     }
